fixing batching-of-write-operations project